--- a/requirements.txt
+++ b/requirements.txt
@@ -28,9 +28,11 @@ Mako==1.3.9
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+memory-profiler==0.61.0
 passlib==1.7.4
 pika==1.3.2
 prompt_toolkit==3.0.50
+psutil==6.1.1
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pydantic==2.10.6
